--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     interested in <span class="text"></span></h4>
                 
                 <div class="img">
-                     <img src="./img/ok.png" class="responsive">
+                     <img src="./img/ok.jpg" class="responsive">
                 </div>
 
                 <div class="home-sci">
