--- a/index.html
+++ b/index.html
@@ -131,41 +131,26 @@
         </section>
 
         <!-- My Projects Section -->
-<section id="projects">
-    <div class="container">
-        <h2>My Projects</h2>
-        <!-- Project 1 -->
-        <div class="project">
-            <h3>Project 1: Energy Consumption Tracker</h3>
-            <a href="https://yourprojectlink.com" target="_blank">Link to Energy Consumption Tracker</a>
-            <p>A web-based application for monitoring and managing energy consumption using IoT sensors and real-time data tracking.</p>
-        </div>
 
-        <!-- Project 2 -->
-        <div class="project">
-            <h3>Project 2: Milk Tea Shop Website (TEA KAP)</h3>
-            <a href="https://yourmilkteashoplink.com" target="_blank">Link to Milk Tea Shop Website</a>
-            <p>An online ordering and inventory management system for a milk tea shop. Includes real-time order tracking and a user-friendly interface.</p>
-        </div>
-
-        <!-- Project 3 -->
-        <div class="project">
-            <h3>Project 3: Nurse Ward Management System</h3>
-            <a href="https://yournursewardprojectlink.com" target="_blank">Link to Nurse Ward Management System</a>
-            <p>A database-driven application to manage patient and nurse assignments in a hospital ward.</p>
-        </div>
-
-        <!-- Additional Projects -->
-        <div class="project">
-            <h3>More Projects</h3>
-            <ul>
-                <li><a href="https://yourprojectlink.com" target="_blank">Project 4: Online Loan Application System</a></li>
-                <li><a href="https://drive.google.com/yourlink" target="_blank">Project 5: MongoDB and Mongoose CRUD Operations</a></li>
-                <li><a href="https://yourprojectlink.com" target="_blank">Project 6: React Native Online Ordering System</a></li>
-            </ul>
-        </div>
-    </div>
+        <section id="MyProject">
+    <h2 class="my-project-title">My Projects <span>(2024)</span></h2>
+    <ul class="my-project-list">
+        <li class="my-project-item">
+            <a href="https://yourprojectlink.com" target="_blank">Project Title 1</a>
+            <p>Short description of Project 1.</p>
+        </li>
+        <li class="my-project-item">
+            <a href="https://yourprojectlink.com" target="_blank">Project Title 2</a>
+            <p>Short description of Project 2.</p>
+        </li>
+        <li class="my-project-item">
+            <a href="https://yourprojectlink.com" target="_blank">Project Title 3</a>
+            <p>Short description of Project 3.</p>
+        </li>
+        <!-- Add more projects as needed -->
+    </ul>
 </section>
+
 
 
         <section id="Certificate">
