--- a/index.html
+++ b/index.html
@@ -50,20 +50,19 @@
 
 
         <section>
-            <div id="about-me">
-                <h2>About Me</h2>
-                <div class="about-me-content">
-                    <img src="path/to/your/personal-logo.png" alt="Personal Logo" class="personal-logo">
-                    <div class="about-me-text">
-                        <h3>Harold | QA</h3>
-                        <p>I'm Harold, a passionate explorer of technology and design. Born and raised with a curiosity for how things work, I've spent my life diving into the world of computers and creativity. I graduated with a degree in Computer Science, where I honed my skills in programming, web development, and user experience design. My career goals are centered around creating impactful digital products that enhance lives. I aspire to work in an environment that challenges me, allows for creativity, and provides opportunities to contribute to meaningful projects.</p>
-                        <p><strong>Contact:</strong></p>
-                        <p>Mobile: [Your Mobile Number]</p>
-                        <p>Address: [Your Address]</p>
-                    </div>
+            <div class="about" id="About">
+                <div class="about-img">
+                    <img src="./img/tagay.jpg" class="abt-res">
+                </div>
+                <div class="about-text">
+                    <h2>About <span>Me</span></h2>
+                    <p>I'm Harold, a passionate explorer of technology and design. Born and raised with a curiosity for how things work, I've spent my life diving into the world of computers and creativity. I graduated with a degree in Computer Science, where I honed my skills in programming, web development, and user experience design.
+
+                        My career goals are centered around creating impactful digital products that enhance lives. I aspire to work in an environment that challenges me, allows for creativity, and provides opportunities to contribute to meaningful projects. .<br>
+                        <br>
+                    </p>
                 </div>
             </div>
-            
         </section>
 
         
