--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
                 <h4 style="--i:6">I'm an BSIT student who is<br>
                     interested in <span class="text"></span></h4>
                 
-                <div class="img">
-                     <img src="./img/ok.png" class="responsive">
-                </div>
 
                 <div class="home-sci">
                     <a href="https://www.facebook.com/haroldkeith.pineda.3000?mibextid=ZbWKwL"style="--i:7" target="_blank"><i class='bx bxl-facebook'></i></a>
@@ -48,19 +45,17 @@
                
         </section>
 
-
         <section>
             <div class="about" id="About">
                 <div class="about-img">
                     <img src="./img/tagay.jpg" class="abt-res">
                 </div>
                 <div class="about-text">
-                    <h2>About <span>Me</span></h2>
-                    <p>I'm Harold, a passionate explorer of technology and design. Born and raised with a curiosity for how things work, I've spent my life diving into the world of computers and creativity. I graduated with a degree in Computer Science, where I honed my skills in programming, web development, and user experience design.
-
-                        My career goals are centered around creating impactful digital products that enhance lives. I aspire to work in an environment that challenges me, allows for creativity, and provides opportunities to contribute to meaningful projects. .<br>
-                        <br>
-                    </p>
+                    <h2>About <span>Me</span></h2><br>
+                    <p>Full Name: Harold Keith O. Pineda</p>
+                    <p>Mobile: 09276174829</p>
+                    <p>Address: Pag-Asa St. Brgy. Vega Bongabon Nueva Ecija</p>
+                    <p><strong>I'm Harold, a passionate explorer of technology and design. Currently studying at PHINMA Araullo University (South Campus), I'm delving into the world of computers and creativity. My career goal is to excel in Quality Assurance, ensuring that digital products are functional and user-friendly. I aspire to work in an environment that challenges me, allows for creativity, and provides opportunities to contribute to meaningful projects.</strong></p>
                 </div>
             </div>
         </section>
@@ -136,9 +131,18 @@
                 <li class="my-project-item">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREoRGyXmHy_6aIgXYqWHdOT3KjfmnuSyxypw&s" alt="Project Image">
                     <div>
-                        <h3>Project Title</h3>
+                        <h3><B>FTT AP</B>P</h3>
+                        <p>FITT APP is a fitness tracking application designed to help users plan and monitor their exercise routines based on the FITT principles. The app allows users to customize their workout plans by specifying the frequency of workouts, the intensity level of each session, the duration of exercises, and the types of activities they want to engage in (e.g., cardio, strength training, flexibility exercises).</p>
+                        <a href="https://drive.google.com/drive/folders/1DPB4MxDYrpEn-RZpH-J-ubOcTwnLCoVj?usp=drive_link">View Project</a>
+                    </div>
+                </li>
+
+                <li class="my-project-item">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREoRGyXmHy_6aIgXYqWHdOT3KjfmnuSyxypw&s" alt="Project Image">
+                    <div>
+                        <h3><B>ECT (Energy Tracking System)</B></h3>
                         <p>Project description goes here, explaining the details of the project.</p>
-                        <a href="#">View Project</a>
+                        <a href="https://drive.google.com/drive/folders/1swdWf3bKk3Pd1RIWe-jD2jja0uTQsneB?usp=drive_link">View Project</a>
                     </div>
                 </li>
                 <!-- Repeat for other projects -->
