--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h2 class="my-project-title">My Projects <span>Showcase</span></h2>
             <ul class="my-project-list">
                 <li class="my-project-item">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREoRGyXmHy_6aIgXYqWHdOT3KjfmnuSyxypw&s" alt="Project Image">
+                    <img src="img/ftt.png" alt="Project Image">
                     <div>
                         <h3><B>FTT AP</B>P</h3>
                         <p>FITT APP is a fitness tracking application designed to help users plan and monitor their exercise routines based on the FITT principles. The app allows users to customize their workout plans by specifying the frequency of workouts, the intensity level of each session, the duration of exercises, and the types of activities they want to engage in (e.g., cardio, strength training, flexibility exercises).</p>
@@ -138,7 +138,7 @@
                 </li>
 
                 <li class="my-project-item">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREoRGyXmHy_6aIgXYqWHdOT3KjfmnuSyxypw&s" alt="Project Image">
+                    <img src="img/ectss.png" alt="Project Image">
                     <div>
                         <h3><B>ECT (Energy Tracking System)</B></h3>
                         <p>Project description goes here, explaining the details of the project.</p>
