--- a/index.html
+++ b/index.html
@@ -141,8 +141,17 @@
                     <img src="img/ectss.png" alt="Project Image">
                     <div>
                         <h3><B>ECT (Energy Tracking System)</B></h3>
-                        <p>Project description goes here, explaining the details of the project.</p>
+                        <p>The Energy Consumption Tracker (ECT) is a digital platform that enables users to monitor and manage their energy usage effectively. It provides real-time data on appliance-specific consumption, empowering users to make informed decisions. Featuring tools for tracking energy savings, sharing tips, and participating in community challenges, the ECT promotes collective efforts toward energy efficiency and sustainable practices.</p>
                         <a href="https://drive.google.com/drive/folders/1swdWf3bKk3Pd1RIWe-jD2jja0uTQsneB?usp=drive_link">View Project</a>
+                    </div>
+                </li>
+
+                  <li class="my-project-item">
+                    <img src="img/ectss.png" alt="Project Image">
+                    <div>
+                        <h3><B>TeaKap</B></h3>
+                        <p>Online ordering and Inventory for the TeaKap store</p>
+                        <a href="https://drive.google.com/drive/folders/1cvnKZcJkGLaFpwFWAzLA3QNRMwgvsxWk?usp=drive_link">View Project</a>
                     </div>
                 </li>
                 <!-- Repeat for other projects -->
