--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </li>
 
                   <li class="my-project-item">
-                    <img src="img/ectss.png" alt="Project Image">
+                    <img src="img/699.png" alt="Project Image">
                     <div>
                         <h3><B>TeaKap</B></h3>
                         <p>Online ordering and Inventory for the TeaKap store</p>
