--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h2 class="my-project-title">My Projects <span>Showcase</span></h2>
             <ul class="my-project-list">
                 <li class="my-project-item">
-                    <img src="img/fitt.png" alt="Project Image">
+                    <a href="img/fitt.png"><img src="img/fitt.png"></a>
                     <div>
                         <h3><B>FTT AP</B>P</h3>
                         <p>FITT APP is a fitness tracking application designed to help users plan and monitor their exercise routines based on the FITT principles. The app allows users to customize their workout plans by specifying the frequency of workouts, the intensity level of each session, the duration of exercises, and the types of activities they want to engage in (e.g., cardio, strength training, flexibility exercises).</p>
