--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </li>
 
                 <li class="my-project-item">
-                    <img src="img/ectss.png" alt="Project Image">
+                    <a href="img/ectss.png"><img src="img/ectss.png"></a>
                     <div>
                         <h3><B>ECT (Energy Tracking System)</B></h3>
                         <p>The Energy Consumption Tracker (ECT) is a digital platform that enables users to monitor and manage their energy usage effectively. It provides real-time data on appliance-specific consumption, empowering users to make informed decisions. Featuring tools for tracking energy savings, sharing tips, and participating in community challenges, the ECT promotes collective efforts toward energy efficiency and sustainable practices.</p>
@@ -147,7 +147,7 @@
                 </li>
 
                   <li class="my-project-item">
-                    <img src="img/699.png" alt="Project Image">
+                    <a href="img/699.png"><img src="img/699.png"></a>
                     <div>
                         <h3><B>TeaKap</B></h3>
                         <p>Online ordering and Inventory for the TeaKap store</p>
