--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section>
             <div class="about" id="About">
                 <div class="about-img">
-                    <img src="./img/701.png" class="abt-res">
+                    <img src="./img/tagay.png" class="abt-res">
                 </div>
                 <div class="about-text">
                     <h2>About <span>Me</span></h2><br>
